<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RoutingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.4"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_weight="15"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.micronavi.mower.component.DrawSurfaceView
                    android:id="@+id/dv_mapping"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <ImageView
                    android:id="@+id/iv_zoomin"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="95dp"
                    android:src="@drawable/zoomin" />

                <ImageView
                    android:id="@+id/iv_zoomout"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="50dp"
                    android:src="@drawable/zoomout" />

                <ImageView
                    android:id="@+id/iv_zoommax"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/zoommax" />

                <ImageView
                    android:id="@+id/iv_location_status"
                    android:layout_width="40dp"
                    android:layout_height="27dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="6"
                    android:src="@drawable/gnss_red" />


                <TextView
                    android:id="@+id/tv_mower_state"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/MowerStatus"
                    android:textColor="#FFFFFF" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="14.5"
            android:orientation="horizontal">

            <com.micronavi.mower.component.MRImageButton
                android:id="@+id/btn_reset_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                app:MRBTN_image="@drawable/menu_send_route"
                app:MRBTN_text="@string/StatusReset"
                app:MRBTN_textColor="@color/black"
                app:MRBTN_textSize="16dp" />

            <com.micronavi.mower.component.MRImageButton
                android:id="@+id/btn_start_working"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                app:MRBTN_image="@drawable/menu_startwork"
                app:MRBTN_text="@string/StartMowing"
                app:MRBTN_textColor="@color/black"
                app:MRBTN_textSize="16dp" />

            <com.micronavi.mower.component.MRImageButton
                android:id="@+id/btn_stop_working"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                app:MRBTN_image="@drawable/menu_stopwork"
                app:MRBTN_text="@string/StopMowing"
                app:MRBTN_textColor="@color/black"
                app:MRBTN_textSize="16dp" />

            <com.micronavi.mower.component.MRImageButton
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                app:MRBTN_image="@drawable/menu_go_home"
                app:MRBTN_text="@string/ReturnDock"
                app:MRBTN_textColor="@color/black"
                app:MRBTN_textSize="16dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>