<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MappingActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">


            <com.micronavi.mower.component.DrawSurfaceView
                android:id="@+id/dv_mapping"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <ImageView
                android:id="@+id/iv_zoomin"
                android:layout_width="31dp"
                android:layout_height="33dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="95dp"
                android:src="@drawable/zoomin" />

            <ImageView
                android:id="@+id/iv_zoomout"
                android:layout_width="31dp"
                android:layout_height="33dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/zoomout" />

            <ImageView
                android:id="@+id/iv_zoommax"
                android:layout_width="31dp"
                android:layout_height="33dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/zoommax" />

            <ImageView
                android:id="@+id/iv_gnss_status"
                android:layout_width="40dp"
                android:layout_height="27dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/gnss_red" />

            <TextView
                android:id="@+id/tv_mapping_state"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="40dp"
                android:text="@string/MappingStatus"
                android:textColor="#FFFFFF" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ibt_start_mapping"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:text="@string/StartMapping"
                android:textSize="16sp" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />
            <Button
                android:id="@+id/ibt_check_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:text="@string/CheckMap"
                android:textSize="16sp" />

            <Button
                android:id="@+id/ibt_send_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:text="@string/PushMap"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:orientation="horizontal">

            <!-- ListView -->
            <ListView
                android:id="@+id/lv_obj"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1" />

            <RelativeLayout
                android:id="@+id/outerRelativeLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_border"
                android:padding="10dp">

                <com.micronavi.mower.component.JoystickView
                    android:id="@+id/joystickView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/joystick_base_blue"
                    app:JV_buttonImage="@drawable/ball_pink" />

                <!-- Triangle button with restricted size -->
                <ImageView
                    android:id="@+id/triangleButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"

                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:scaleType="fitCenter"

                    android:src="@drawable/fullscreen" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>



    <RelativeLayout
        android:id="@+id/outerRelativeLayoutEnlarge"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#AA000000"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.micronavi.mower.component.JoystickView
            android:id="@+id/joystickViewEnlarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/joystick_base_blue"
            app:JV_buttonImage="@drawable/ball_pink" />

        <!-- Triangle button with restricted size -->
        <ImageView
            android:id="@+id/triangleButtonEnlarge"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/fullscreen"
            android:rotation="180"/>
    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />
</androidx.constraintlayout.widget.ConstraintLayout>